--- a/src/main/webapp/WEB-INF/views/create.html
+++ b/src/main/webapp/WEB-INF/views/create.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Add Product</h3>
 <p>
-    <a th:href="@{/prosucts}">Back to product list</a>
+    <a th:href="@{/products}">Back to product list</a>
 </p>
 <div id="form">
     <form  th:action="@{/products/save}" th:object="${products}" method="post" novalidate="novalidate">
