--- a/src/main/webapp/WEB-INF/views/edit.html
+++ b/src/main/webapp/WEB-INF/views/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>
-    <a th:href="@{products}">Back to product list</a>
+    <a th:href="@{/products}">Back to product list</a>
 </p>
 <div id="form">
     <form action="#" th:action="@{/products/update}" th:object="${products}"
