--- a/src/main/webapp/WEB-INF/views/delete.html
+++ b/src/main/webapp/WEB-INF/views/delete.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Remove Customer</h3>
 <p>
-    <a th:href="@{/customer}">
+    <a th:href="@{/products}">
         Back to customer list
     </a>
 </p>
